<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="start"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:labelFor="@+id/price"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/price"/>

                <EditText android:id="@+id/price"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/colorAccent"
                          android:textColorHint="@color/colorAccent"
                          android:textColorHighlight="@color/colorPrimary"
                          android:selectAllOnFocus="false"
                          android:inputType="numberDecimal"
                          android:textSize="16sp"
                          android:textStyle="bold"
                          android:text="@string/default_price"/>

                <TextView android:id="@+id/currency"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/colorAccent"
                          android:textSize="16sp"
                          android:textStyle="bold"
                          android:text="@string/default_currency"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

        <TextView android:id="@+id/running_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/no_running_total"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:text="@string/from"/>
            <android.support.v7.widget.AppCompatSpinner android:id="@+id/payment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </android.support.v7.widget.AppCompatSpinner>

            <EditText android:id="@+id/recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:selectAllOnFocus="false"
                android:inputType="number"
                android:hint="@string/number"/>

        </LinearLayout>

        <ImageView android:id="@+id/muffin_image"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center|bottom"
            android:contentDescription="@string/app_name"
            android:src="@drawable/whole_muffin" />

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
            <!--android:layout_gravity="center"-->
            <!--android:textSize="16sp"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:textColor="@color/white"-->
            <!--android:text="@string/buy"-->
            <!--android:onClick="launchInstructionDialog"/>-->

        <com.hover.sdk.buttons.BuyButton
            android:id="@+id/hover_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/buy" />

</LinearLayout>